correct the display of the data
